fix: bug onde o z-index não estava funcionando para abrir e fechar menu em páginas diferentes

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,7 @@
   left: 0;
   width: 285px;
   height: 100%;
-  z-index: 1;
+  z-index: 6;
 }
 .navbar__menu__logo__img {
   margin: 26px 22.61px 53px 33px;
@@ -55,6 +55,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 5;
 }
 
 .navbar__closed__menu {
@@ -70,6 +71,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  z-index: 4;
 }
 .navbar__closed__menu__hamburguer {
   display: none;
@@ -235,12 +237,14 @@
 }
 
 .buscarProdutos__container {
-  margin-top: 110px;
+  padding-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 85vh;
-  margin-bottom: 67px;
+  height: auto;
+  padding-bottom: 67px;
+  position: relative;
+  z-index: 3;
 }
 .buscarProdutos__container__title {
   font-family: "Poppins", sans-serif;
@@ -340,6 +344,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(27, 33, 41, 0.6980392157);
+  z-index: 5;
 }
 
 .botaoAdicionar {
@@ -452,6 +457,7 @@
   height: 208px;
   background-color: #fefefe;
   border-radius: 10px;
+  z-index: 6;
 }
 .popupRemove__container__text {
   border-bottom: 1px solid #6d7989;
