--- a/src/styles/_buscarProdutos.scss
+++ b/src/styles/_buscarProdutos.scss
@@ -1,12 +1,14 @@
 @use 'variables';
 
 .buscarProdutos__container {
-  margin-top: 110px;
+  padding-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 85vh;
-  margin-bottom: 67px;
+  height: auto;
+  padding-bottom: 67px;
+  position: relative;
+  z-index: 3;
 
   &__title {
     font-family: variables.$primary-font;
@@ -103,7 +105,6 @@
       }
     }
   }
-
   .overlay {
     position: absolute;
     top: 0;
@@ -111,5 +112,6 @@
     right: 0;
     bottom: 0;
     background-color: variables.$secundary-bgColor;
+    z-index: 5;
   }
 }
